--- a/index.html
+++ b/index.html
@@ -21,15 +21,46 @@
 	<!--[if IE]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	
+
 	<link rel="stylesheet/less" type="text/css" href="/css/main.less">
 	<script src="js/less.min.js"></script>
 	
 	<link href="http://fonts.googleapis.com/css?family=Roboto:400,700,500,300,400italic&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<div class="wrapper">
+	<header class="header">
+		<div class="wrapper">
 
+		</div>
+	</header>
+	<div class="wrapper">
+		<section class="main-b">
+			<div class="galery-b">
+				<div class="galery-b__i">
+					<a href="images/galery-photo-1.jpg">
+						<img src="images/galery-photo-1-tmb.jpg" width="240" height="180" alt="">
+					</a>
+				</div>
+				<div class="galery-b__i">
+					<a href="images/galery-photo-2.jpg">
+						<img src="images/galery-photo-2-tmb.jpg" width="240" height="180" alt="">
+					</a>
+				</div>
+				<div class="galery-b__i">
+					<a href="images/galery-photo-3.jpg">
+						<img src="images/galery-photo-3-tmb.jpg" width="240" height="180" alt="">
+					</a>
+				</div>
+				<div class="galery-b__i">
+					<a href="images/galery-photo-4.jpg">
+						<img src="images/galery-photo-4-tmb.jpg" width="240" height="180" alt="">
+					</a>
+				</div>
+			</div>
+		</section>
+
+		<section class="sub-b">
+		</section>
 	</div>
 
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
