--- a/index.html
+++ b/index.html
@@ -62,24 +62,34 @@
 				</div>
 			</div>
 			<div class="row-fluid box-c">
-				<div class="span6">
-					<div class="cur-input">
-						<input class="cur-input__num" type="text" value="{default_amount}">
-						<span class="cur-input__t">{currency}</span>
+				<form action="http://app.forheroes.org.ua:8082/api/checkout/" method="POST">
+					<div class="span6">
+						<div class="cur-input">
+							<input class="cur-input__num" type="text" name="amount" value="{default_amount}">
+
+							<span class="cur-input__t">{currency}</span>
+						</div>
 					</div>
-				</div>
-				<div class="span6">
-					<button class="btn">Сплатити</button>
-				</div>
+					<div class="span6">
+						<button class="btn">Сплатити</button>
+
+						<input type="hidden" name="project_id" value="{id}">
+					</div>
+				</form>
 			</div>
 			<div class="galery-b">{images}</div>
 		</section>
+
+		<div class="main-b main-b-slider js-mainSlider">
+			<ul class="slides"></ul>
+		</div>
 
 		<section class="sub-b">
 		</section>
 	</div>
 
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	 <script src="js/jquery.flexslider-min.js"></script>
 	 <script src="js/script.js"></script>
 </body>
 </html>
