--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<link rel="stylesheet/less" type="text/css" href="css/main.less">
 	<script src="js/less.min.js"></script>
-	
+
 	<link href="http://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -88,8 +88,24 @@
 		</section>
 	</div>
 
-	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	 <script src="js/jquery.flexslider-min.js"></script>
-	 <script src="js/script.js"></script>
+	<!-- The Gallery as lightbox dialog, should be a child element of the document body -->
+	<div id="blueimp-gallery" class="blueimp-gallery">
+	    <div class="slides"></div>
+	    <h3 class="title"></h3>
+	    <a class="prev">‹</a>
+	    <a class="next">›</a>
+	    <a class="close">×</a>
+	    <a class="play-pause"></a>
+	    <ol class="indicator"></ol>
+	</div>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="js/jquery.flexslider-min.js"></script>
+	<script src="js/script.js"></script>
+
+
+	<link href="css/blueimp-gallery.min.css" rel="stylesheet">
+	<script src="js/blueimp-gallery.min.js"></script>
+	<script src="js/jquery.blueimp-gallery.min.js"></script>
 </body>
 </html>
