--- a/handmade.html
+++ b/handmade.html
@@ -22,8 +22,7 @@
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
-	<link rel="stylesheet/less" type="text/css" href="css/main.less">
-	<script src="js/less.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 	<link href="http://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
