--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						<div class="info-t">Треба зібрати: <b>{required_amount} {currency}</b></div>
 					</div>
 				</div>
-				<div class="row-fluid box-c">
+				<div class="row-fluid box-c box-c-btn">
 					<form action="http://app.forheroes.org.ua:8082/api/donate" method="POST">
 						<div class="span6">
 							<div class="cur-input">
