--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html>
 <head lang="UA-ua">
     <meta charset="utf-8">
-    <title>Handmade For Heroes</title>
+    <title>For Heroes</title>
 	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<meta property="og:title" content="For heroes">
+	<meta property="og:description" content="Ми збираємо на допомогу для наших героїв">
+	<meta property="og:url" content="http://forheroes.org.ua/">
+	<meta property="og:image" content="http://forheroes.org.ua/images/open-graph.jpg">
+
+	<meta property="og:locale" content="ua_UA">
+	<meta property="og:site_name" content="For heroes">
+	<meta property="og:type" content="article">
+	<meta property="article:publisher" content="https://www.facebook.com/groups/HandmadeForHeroes.UA">
+	
 	<script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -28,7 +38,8 @@
 	<link href="http://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 <body class="load">
-	<noscript><div class="noscript">For full functionality of this site it is necessary to enable JavaScript. Here are the <a href="http://www.enable-javascript.com/" target="_blank"> instructions how to enable JavaScript in your web browser</a>.</div></noscript>
+	<noscript><div class="noscript">Для полной функциональности этого сайта необходимо включить JavaScript. Вот <a href="http://www.enable-javascript.com/ru/" target="_blank">инструкции, как включить JavaScript в вашем браузере</a>.</div></noscript>
+	
 	<div class="load_overlay" id="load_overlay">
 		<div class="load_animate">
 			<div class="wBall" id="wBall_1">
@@ -76,12 +87,11 @@
 			</menu>
 		</div>
 	</header>
-	
-	<div id="mainBlock">
+
+	<div id="mainBlock" style="visibility: hidden;">
 		<div class="wrapper">
 			<section class="main-b">
 				<h1 class="main-b__title">{description}</h1>
-				<p class="main-b__des hidden js-destination">{destination}</p>
 				<div class="row-fluid box-c">
 					<div class="span6">
 						<div class="info-t">Зібрано: <b>{amount} {currency}</b></div>
@@ -103,12 +113,16 @@
 						</div>
 						<div class="span6">
 							<button class="btn">Сплатити</button>
+							<p class="btn-sub-t">
+								<a class="js-showDes" href="#">Куди підуть кошти?</a>
+							</p>
 
 							<input type="hidden" name="project_id" value="{id}">
 						</div>
 					</form>
 				</div>
-				<div class="galery-b">{images}</div>
+				<p class="main-b__des js-destination">{destination}</p>
+				<div class="galery-b js-galery">{images}</div>
 			</section>
 		</div>
 	</div>
@@ -121,9 +135,9 @@
 		<section class="sub-b">
 			<p class="sub-b__t">
 				Розповсюдити інформацію про проект:
-				<span class="social-btn">
-					<a class="social-btn__i __fb js-shareBtn" data-name="facebook" href="#"></a>
-					<a class="social-btn__i __tw js-shareBtn" data-name="twitter" href="#"></a>
+				<span class="social-btn js-social">
+					<a class="social-btn__i __fb" id="fb-share" title="Facebook" href="#"></a>
+					<a class="social-btn__i __tw" id="tw-share" title="Twitter" href="#"></a>
 				</span>
 			</p>
 		</section>
@@ -147,5 +161,6 @@
 	<link href="css/blueimp-gallery.min.css" rel="stylesheet">
 	<script src="js/blueimp-gallery.min.js"></script>
 	<script src="js/jquery.blueimp-gallery.min.js"></script>
+
 </body>
 </html>
