--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<li class="head__menu__i">
 					<a href="./">Збір коштів</a>
 				</li>
-				<li class="head__menu__i">
+				<!-- <li class="head__menu__i">
 					<a href="handmade.html">Handmade For Heroes</a>
 				</li>
 				<li class="head__menu__i">
@@ -79,7 +79,7 @@
 				</li>
 				<li class="head__menu__i">
 					<a href="about.html">Про нас</a>
-				</li>
+				</li> -->
 				<!-- <li class="head__menu__i">
 					<a href="#">UA</a>
 				</li> -->
