--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 				<span class="social-btn js-social">
 					<a class="social-btn__i __fb" id="fb-share" title="Facebook" href="#"></a>
 					<a class="social-btn__i __tw" id="tw-share" title="Twitter" href="#"></a>
+					<div id="fb-root"></div>
 				</span>
 			</p>
 		</section>
