--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 	ga('send', 'pageview');
 	</script>
 
+	<link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
+	<link rel="apple-touch-icon" href="touch-icon-iphone.png">
+	<link rel="shortcut icon" href="favicon.ico">
+
 	<!--[if IE]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
@@ -60,6 +66,7 @@
 	</div>
 
 	<header class="head">
+		<a href="http://stfalcon.github.io/euromaidan/" class="em-ribbon" style="position: absolute; left:0; top:0; width: 90px; height: 90px; background: url('http://stfalcon.github.io/euromaidan/img/em-ribbon.png'); z-index: 2013; border: 0;" title="Розмісти стрічку з символікою України і ЄС на своєму сайті!" target="_blank"></a>
 		<div class="wrapper">
 			<aside class="head__logo">For heroes</aside>
 			<button class="toogle-menu" id="toogleMenuBtn">
