--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	ga('create', 'UA-61043704-1', 'forheroes.com.ua');
+	ga('create', 'UA-61043704-1', 'forheroes.org.ua');
 	ga('require', 'displayfeatures');
 	ga('send', 'pageview');
 	</script>
@@ -38,9 +38,7 @@
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
-	<link rel="stylesheet/less" type="text/css" href="css/main.less">
-	<script src="js/less.min.js"></script>
-	<!-- <link rel="stylesheet" type="text/css" href="css/main.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 	<link href="http://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
