--- a/handmade.html
+++ b/handmade.html
@@ -2,18 +2,18 @@
 <html>
 <head lang="UA-ua">
     <meta charset="utf-8">
-    <title>For Heroes</title>
+    <title>Handmade For Heroes - For Heroes</title>
 	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta property="og:title" content="For heroes">
+	<meta property="og:title" content="Handmade For Heroes - For heroes">
 	<meta property="og:description" content="Ми збираємо на допомогу для наших героїв">
 	<meta property="og:url" content="http://forheroes.org.ua/">
 	<meta property="og:image" content="http://forheroes.org.ua/images/open-graph.jpg">
 
 	<meta property="og:locale" content="ua_UA">
-	<meta property="og:site_name" content="For heroes">
+	<meta property="og:site_name" content="Handmade For Heroes - For heroes">
 	<meta property="og:type" content="article">
 	<meta property="article:publisher" content="https://www.facebook.com/groups/HandmadeForHeroes.UA">
 	
@@ -96,60 +96,59 @@
 			</menu>
 		</div>
 	</header>
-	
-	<script id="projectBlock" type="text/x-handlebars-template">
-	{{#each proj}}
-	{{#if status}}
-	<li class="js-block" data-id="{{id}}">
+
+	<section class="main-b">
 		<div class="wrapper">
-			<section class="proj-b">
-				<h1 class="proj-b__title">{{description}}</h1>
-
-				<div class="box-c">
-					<div class="info-t">Зібрано: <b>{{amount}} {{currency}}</b></div>
-					<div class="info-t">Треба зібрати: <b>{{required_amount}} {{currency}}</b></div>
-
-					<div class="row-fluid box-c-btn">
-						<form action="http://app.forheroes.org.ua:8082/api/donate" method="POST">
-							<div class="span6">
-								<div class="cur-input">
-									<span class="cur-input__t">{{currency}}</span>
-
-									<div class="cur-input__w">
-										<input class="cur-input__num" type="number" name="amount" value="{{default_amount}}">
-									</div>
-								</div>
-							</div>
-							<div class="span6">
-								<button class="btn">Сплатити</button>
-								<p class="btn-sub-t">
-									<a class="js-showDes" href="#">Куди підуть кошти?</a>
-								</p>
-
-								<input type="hidden" name="project_id" value="{{id}}">
-							</div>
-						</form>
+			<h2 class="main-b__title">Як це працює</h2>
+			
+			<div class="step-b">
+				<div class="step-b__i row-fluid">
+					<div class="span6">
+						<div class="step-b__i__img">
+							<img src="images/how-it-works-1.png" width="200" height="200" alt="об’єднуємо майстрів">
+						</div>					
+					</div>
+					<div class="span6">
+						<h3 class="step-b__i__title">Об’єднуємо майстрів</h3>
+						<p class="step-b__i__text">Збираємо людей, які бажають надати для продажу власні вироби</p>
+						<!-- <p class="step-b__i__link">
+							<a href="">Заявка майстра</a>
+						</p> -->
+					</div>
+					<i class="step-b__i__arow sp-arow"></i>
+				</div>
+				<div class="step-b__i row-fluid">
+					<div class="span6">
+						<h3 class="step-b__i__title">Проводимо ярмарки</h3>
+						<p class="step-b__i__text">Періодично проводимо благодійні розпродажі або інші творчі акції зі збору коштів</p>
+						<!-- <p class="step-b__i__link">
+							<a href="">Наші заходи</a>
+						</p> -->
+					</div>
+					<div class="span6">
+						<div class="step-b__i__img">
+							<img src="images/how-it-works-2.png" width="200" height="200" alt="об’єднуємо майстрів">
+						</div>					
+					</div>
+					<i class="step-b__i__arow sp-arow"></i>
+				</div>
+				<div class="step-b__i row-fluid">
+					<div class="span6">
+						<div class="step-b__i__img">
+							<img src="images/how-it-works-3.png" width="200" height="200" alt="об’єднуємо майстрів">
+						</div>					
+					</div>
+					<div class="span6">
+						<h3 class="step-b__i__title">Допомагаємо нашим героям</h3>
+						<p class="step-b__i__text">Зібрані кошти відправляємо на допомогому військовим: ВСУ або добровольцям</p>
+						<!-- <p class="step-b__i__link">
+							<a href="">Куди йдуть кошти</a>
+						</p> -->
 					</div>
 				</div>
-				
-				<p class="proj-b__des js-destination">{{destination}}</p>
-				<div class="galery-b js-galery">
-				{{#each images}}<div class="galery-b__i"> {{!Fix display blox (inline-block)}}
-						<a target="_blank" title="{{image_description}}" href="http://app.forheroes.org.ua:8082/images/{{image_name}}" data-gallery="">
-							<img width="240" height="180" alt="{{image_description}}" src="http://app.forheroes.org.ua:8082/images/{{image_tmb_name}}" draggable="false">
-						</a>
-					</div>{{/each}}
-				</div>
-			</section>
+			</div>
 		</div>
-	</li>
-	{{/if}}
-	{{/each}}
-	</script>
-
-	<div class="main-b-slider js-mainSlider">
-		<ul class="slides" id="projectBlockContainer"></ul>
-	</div>
+	</section>
 
 	<footer class="footer">
 		<div class="wrapper">
@@ -157,7 +156,7 @@
 				Розповсюдити інформацію про проект:
 				<span class="social-btn js-social">
 					<a class="social-btn__i sp-mi-fb" id="fb-share" title="Facebook" href="#"></a>
-						<a class="social-btn__i sp-mi-tw" id="tw-share" title="Twitter" href="#"></a>
+					<a class="social-btn__i sp-mi-tw" id="tw-share" title="Twitter" href="#"></a>
 					<div id="fb-root"></div>
 				</span>
 			</p>
@@ -183,6 +182,5 @@
 	<link href="css/blueimp-gallery.min.css" rel="stylesheet">
 	<script src="js/blueimp-gallery.min.js"></script>
 	<script src="js/jquery.blueimp-gallery.min.js"></script>
-
 </body>
 </html>
