--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/main.min.css">
 
 	<link href="http://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
@@ -90,9 +90,9 @@
 				<li class="head__menu__i">
 					<a href="about.html">Про нас</a>
 				</li>
-				<!-- <li class="head__menu__i">
+				<li class="head__menu__i">
 					<a href="#">UA</a>
-				</li> -->
+				</li>
 			</menu>
 		</div>
 	</header>
@@ -176,13 +176,6 @@
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="js/jquery.flexslider-min.js"></script>
-	<script src="js/handlebars-v3.0.3.js"></script>
-	<script src="js/script.js"></script>
-
-	<link href="css/blueimp-gallery.min.css" rel="stylesheet">
-	<script src="js/blueimp-gallery.min.js"></script>
-	<script src="js/jquery.blueimp-gallery.min.js"></script>
-
+	<script src="js/main.min.js"></script>
 </body>
 </html>
