finish add grunt

--- a/en/about.html
+++ b/en/about.html
@@ -1,19 +1,19 @@
 ﻿<!DOCTYPE html>
 <html>
-<head lang="ua">
+<head lang="en">
     <meta charset="utf-8">
-    <title>Handmade For Heroes - For Heroes</title>
+    <title>For Heroes</title>
 	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta property="og:title" content="Handmade For Heroes - For Heroes">
+	<meta property="og:title" content="For Heroes">
 	<meta property="og:description" content="Ми збираємо на допомогу для наших героїв">
 	<meta property="og:url" content="http://forheroes.org.ua/">
 	<meta property="og:image" content="http://forheroes.org.ua/access/img/open-graph.jpg">
 
-	<meta property="og:locale" content="ua_UA">
-	<meta property="og:site_name" content="Handmade For Heroes - For Heroes">
+	<meta property="og:locale" content="en_GB">
+	<meta property="og:site_name" content="For Heroes">
 	<meta property="og:type" content="article">
 	<meta property="article:publisher" content="https://www.facebook.com/groups/HandmadeForHeroes.UA">
 	
@@ -105,67 +105,94 @@
 
 	<section class="main-b">
 		<div class="wrapper">
-			<h2 class="main-b__title">Як це працює</h2>
-			
-			<div class="step-b">
-				<div class="step-b__i row-fluid">
-					<div class="span6">
-						<div class="step-b__i__img">
-							<img src="/access/img/how-it-works-1.png" width="200" height="200" alt="Об’єднуємо майстрів">
-						</div>					
+			<h2 class="main-b__title">Волонтерська група</h2>
+	
+			<div class="row-fluid">
+				<div class="span4">
+					<div class="circle __1">
+						<i class="circle__i __1"></i>
+						<i class="circle__i __2"></i>
+
+						<div class="circle__img">
+							<i style="background: url(/access/img/about-tetjana-kovalchuk.jpg)"></i>
+						</div>
 					</div>
-					<div class="span6">
-						<h3 class="step-b__i__title">Об’єднуємо майстрів</h3>
-						<p class="step-b__i__text">Збираємо людей, які бажають надати для продажу власні вироби</p>
-						<!-- <p class="step-b__i__link">
-							<a href="">Заявка майстра</a>
-						</p> -->
+
+					<h4 class="about-name">Тетяна Ковальчук</h4>
+
+					<div class="social-btn text-center js-social">
+						<a class="social-btn__i sp-mi-fb" title="Facebook" href="https://www.facebook.com/tanja.kovalchyk" target="_blank"></a>
 					</div>
-					<i class="step-b__i__arow sp-arow"></i>
 				</div>
-				<div class="step-b__i row-fluid">
-					<div class="span6">
-						<h3 class="step-b__i__title">Проводимо ярмарки</h3>
-						<p class="step-b__i__text">Періодично проводимо благодійні розпродажі або інші творчі акції зі збору коштів</p>
-						<!-- <p class="step-b__i__link">
-							<a href="">Наші заходи</a>
-						</p> -->
+				<div class="span4">
+					<div class="circle __2">
+						<i class="circle__i __1"></i>
+						<i class="circle__i __2"></i>
+
+						<div class="circle__img">
+							<i style="background: url(/access/img/about-julіja-smojlovska.jpg)"></i>
+						</div>
 					</div>
-					<div class="span6">
-						<div class="step-b__i__img">
-							<img src="/access/img/how-it-works-2.png" width="200" height="200" alt="Проводимо ярмарки">
-						</div>					
+
+					<h4 class="about-name">Юлія Смойловська</h4>
+
+					<div class="social-btn text-center js-social">
+						<a class="social-btn__i sp-mi-fb" title="Facebook" href="https://www.facebook.com/julia.smoylovskaya" target="_blank"></a>
+						<a class="social-btn__i sp-mi-in" title="LinkedIn" href="https://www.linkedin.com/profile/view?id=21011949" target="_blank"></a>
 					</div>
-					<i class="step-b__i__arow sp-arow"></i>
 				</div>
-				<div class="step-b__i row-fluid">
-					<div class="span6">
-						<div class="step-b__i__img">
-							<img src="/access/img/how-it-works-3.png" width="200" height="200" alt="Допомагаємо нашим героям">
-						</div>					
+				<div class="span4">
+					<div class="circle __3">
+						<i class="circle__i __1"></i>
+						<i class="circle__i __2"></i>
+
+						<div class="circle__img">
+							<i style="background: url(/access/img/about-evgenіj-slavjanskij.jpg)"></i>
+						</div>
 					</div>
-					<div class="span6">
-						<h3 class="step-b__i__title">Допомагаємо нашим героям</h3>
-						<p class="step-b__i__text">Зібрані кошти відправляємо на допомогому військовим: ВСУ або добровольцям</p>
-						<!-- <p class="step-b__i__link">
-							<a href="">Куди йдуть кошти</a>
-						</p> -->
+
+					<h4 class="about-name">Евгеній Славянський</h4>
+
+					<div class="social-btn text-center js-social">
+						<a class="social-btn__i sp-mi-fb" title="Facebook" href="https://www.facebook.com/E.Slavyansky" target="_blank"></a>
+						<a class="social-btn__i sp-mi-in" title="LinkedIn" href="https://www.linkedin.com/in/eslavyansky" target="_blank"></a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<footer class="footer">
+	<footer class="about-footer">
 		<div class="wrapper">
-			<p class="footer__t">
-				Розповсюдити інформацію про проект:
-				<span class="social-btn js-social">
-					<a class="social-btn__i sp-mi-fb" id="fb-share" title="Facebook" href="#"></a>
+			<h3 class="about-footer__title">Контакти</h3>
+
+			<div class="row-fluid">
+				<div class="span6">
+					<div class="about-footer__info">
+						<i class="icon sp-mi-cl"></i>
+						Телефон: <a href="tel:+38 044 290 86 92">+38 044 290 86 92</a>
+					</div>
+				</div>
+				<div class="span6">
+					<div class="about-footer__info">
+						<i class="icon sp-mi-em"></i>
+						Пошта: <script type="text/javascript">var zigxaxl = ['a','.','i','"','@','s','e','=','l','g','c','m','e','r','h','f','s','"','i','t','e','a','u','>','<','u','a','a','r','g','h','c','a','m','.','@','l','<','o',' ','o','l','m','=','e','o','m','o','r','s','"','h','.','m','a','o','m','o','i','r','.','/',' ','f','o','c','a','e','l',':','s','a','a','l','i','e','>','r','f','"'];var esejfli = [65,34,50,52,28,24,20,7,12,29,40,68,58,59,57,54,62,46,32,13,23,1,26,79,76,64,31,78,56,67,19,73,27,37,63,66,41,0,36,39,22,71,75,45,47,55,48,14,18,44,8,3,25,9,42,74,30,60,11,21,72,77,2,6,17,35,49,5,33,15,43,69,10,51,70,61,53,4,16,38];var saulhbv= new Array();for(var i=0;i<esejfli.length;i++){saulhbv[esejfli[i]] = zigxaxl[i]; }for(var i=0;i<saulhbv.length;i++){document.write(saulhbv[i]);}</script>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="footer">
+			<div class="wrapper">
+				<p class="footer__t">
+					Розповсюдити інформацію про проект:
+					<span class="social-btn js-social">
+						<a class="social-btn__i sp-mi-fb" id="fb-share" title="Facebook" href="#"></a>
 						<a class="social-btn__i sp-mi-tw" id="tw-share" title="Twitter" href="#"></a>
-					<div id="fb-root"></div>
-				</span>
-			</p>
+						<div id="fb-root"></div>
+					</span>
+				</p>
+			</div>
 		</div>
 	</footer>
 
