--- a/en/handmade.html
+++ b/en/handmade.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
-<head lang="ua">
+<head lang="en">
     <meta charset="utf-8">
     <title>Handmade For Heroes - For Heroes</title>
 	
@@ -12,7 +12,7 @@
 	<meta property="og:url" content="http://forheroes.org.ua/">
 	<meta property="og:image" content="http://forheroes.org.ua/access/img/open-graph.jpg">
 
-	<meta property="og:locale" content="ua_UA">
+	<meta property="og:locale" content="en_GB">
 	<meta property="og:site_name" content="Handmade For Heroes - For Heroes">
 	<meta property="og:type" content="article">
 	<meta property="article:publisher" content="https://www.facebook.com/groups/HandmadeForHeroes.UA">
