--- a/en/index.html
+++ b/en/index.html
@@ -1,19 +1,19 @@
 ﻿<!DOCTYPE html>
 <html>
-<head lang="ua">
+<head lang="en">
     <meta charset="utf-8">
-    <title>Handmade For Heroes - For Heroes</title>
+    <title>For Heroes</title>
 	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta property="og:title" content="Handmade For Heroes - For Heroes">
+	<meta property="og:title" content="For Heroes">
 	<meta property="og:description" content="Ми збираємо на допомогу для наших героїв">
 	<meta property="og:url" content="http://forheroes.org.ua/">
-	<meta property="og:image" content="http://forheroes.org.ua/access/img/open-graph.jpg">
+	<meta property="og:image" content="http://forheroes.org.ua/img/open-graph.jpg">
 
-	<meta property="og:locale" content="ua_UA">
-	<meta property="og:site_name" content="Handmade For Heroes - For Heroes">
+	<meta property="og:locale" content="en_GB">
+	<meta property="og:site_name" content="For Heroes">
 	<meta property="og:type" content="article">
 	<meta property="article:publisher" content="https://www.facebook.com/groups/HandmadeForHeroes.UA">
 	
@@ -37,7 +37,7 @@
 	<!--[if IE]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-
+	
 	<!--STYLE-->
 	<link rel="stylesheet" type="text/css" href="/access/css/main.min.css">
 	<!--STYLE END-->
@@ -103,58 +103,9 @@
 		</div>
 	</header>
 
-	<section class="main-b">
-		<div class="wrapper">
-			<h2 class="main-b__title">Як це працює</h2>
-			
-			<div class="step-b">
-				<div class="step-b__i row-fluid">
-					<div class="span6">
-						<div class="step-b__i__img">
-							<img src="/access/img/how-it-works-1.png" width="200" height="200" alt="Об’єднуємо майстрів">
-						</div>					
-					</div>
-					<div class="span6">
-						<h3 class="step-b__i__title">Об’єднуємо майстрів</h3>
-						<p class="step-b__i__text">Збираємо людей, які бажають надати для продажу власні вироби</p>
-						<!-- <p class="step-b__i__link">
-							<a href="">Заявка майстра</a>
-						</p> -->
-					</div>
-					<i class="step-b__i__arow sp-arow"></i>
-				</div>
-				<div class="step-b__i row-fluid">
-					<div class="span6">
-						<h3 class="step-b__i__title">Проводимо ярмарки</h3>
-						<p class="step-b__i__text">Періодично проводимо благодійні розпродажі або інші творчі акції зі збору коштів</p>
-						<!-- <p class="step-b__i__link">
-							<a href="">Наші заходи</a>
-						</p> -->
-					</div>
-					<div class="span6">
-						<div class="step-b__i__img">
-							<img src="/access/img/how-it-works-2.png" width="200" height="200" alt="Проводимо ярмарки">
-						</div>					
-					</div>
-					<i class="step-b__i__arow sp-arow"></i>
-				</div>
-				<div class="step-b__i row-fluid">
-					<div class="span6">
-						<div class="step-b__i__img">
-							<img src="/access/img/how-it-works-3.png" width="200" height="200" alt="Допомагаємо нашим героям">
-						</div>					
-					</div>
-					<div class="span6">
-						<h3 class="step-b__i__title">Допомагаємо нашим героям</h3>
-						<p class="step-b__i__text">Зібрані кошти відправляємо на допомогому військовим: ВСУ або добровольцям</p>
-						<!-- <p class="step-b__i__link">
-							<a href="">Куди йдуть кошти</a>
-						</p> -->
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+	<div class="main-b-slider js-mainSlider">
+		<ul class="slides" id="projectBlockContainer"></ul>
+	</div>
 
 	<footer class="footer">
 		<div class="wrapper">
