--- a/pl/handmade.html
+++ b/pl/handmade.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
-<head lang="ua">
+<head lang="pl">
     <meta charset="utf-8">
     <title>Handmade For Heroes - For Heroes</title>
 	
@@ -8,11 +8,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<meta property="og:title" content="Handmade For Heroes - For Heroes">
-	<meta property="og:description" content="Ми збираємо на допомогу для наших героїв">
+	<meta property="og:description" content="Zbieramy, aby pomóc naszym bohaterom">
 	<meta property="og:url" content="http://forheroes.org.ua/">
 	<meta property="og:image" content="http://forheroes.org.ua/access/img/open-graph.jpg">
 
-	<meta property="og:locale" content="ua_UA">
+	<meta property="og:locale" content="pl_PL">
 	<meta property="og:site_name" content="Handmade For Heroes - For Heroes">
 	<meta property="og:type" content="article">
 	<meta property="article:publisher" content="https://www.facebook.com/groups/HandmadeForHeroes.UA">
@@ -45,7 +45,7 @@
 	<link href="http://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 <body class="load">
-	<noscript><div class="noscript">Для полной функциональности этого сайта необходимо включить JavaScript. Вот <a href='http://www.enable-javascript.com/ru/' target='_blank'>инструкции, как включить JavaScript в вашем браузере</a>.</div></noscript>
+	<noscript><div class="noscript">Dla funktsyonalnosty Zobacz pełną stronę эtoho to neobhodimo JavaScript. tutaj <a href='http://www.enable-javascript.com/ru/' target='_blank'>Instrukcje, jak aktywować JavaScript w swojej przeglądarce</a>.</div></noscript>
 	
 	<div class="load_overlay" id="load_overlay">
 		<div class="load_animate">
@@ -81,7 +81,7 @@
 
 			<menu class="head__menu js-headMenu">
 				<li class="head__menu__i">
-					<a href="./">Збір коштів</a>
+					<a href="./">Fundraising</a>
 				</li>
 				<li class="head__menu__i">
 					<a href="handmade.html">Handmade For Heroes</a>
@@ -90,7 +90,7 @@
 					<a href="what-donate.html">Звіти</a>
 				</li> -->
 				<li class="head__menu__i">
-					<a href="about.html">Про нас</a>
+					<a href="about.html">o Nas</a>
 				</li>
 				<li class="head__menu__i">
 					<div class="language" id="languageSwitcher">
@@ -105,35 +105,35 @@
 
 	<section class="main-b">
 		<div class="wrapper">
-			<h2 class="main-b__title">Як це працює</h2>
+			<h2 class="main-b__title">Jak to działa</h2>
 			
 			<div class="step-b">
 				<div class="step-b__i row-fluid">
 					<div class="span6">
 						<div class="step-b__i__img">
-							<img src="/access/img/how-it-works-1.png" width="200" height="200" alt="Об’єднуємо майстрів">
+							<img src="/access/img/how-it-works-1.png" width="200" height="200" alt="jednoczy artystów">
 						</div>					
 					</div>
 					<div class="span6">
-						<h3 class="step-b__i__title">Об’єднуємо майстрів</h3>
-						<p class="step-b__i__text">Збираємо людей, які бажають надати для продажу власні вироби</p>
+						<h3 class="step-b__i__title">jednoczy artystów</h3>
+						<p class="step-b__i__text">Stawianie ludzi, którzy chcą dostarczyć swoje produkty na sprzedaż</p>
 						<!-- <p class="step-b__i__link">
-							<a href="">Заявка майстра</a>
+							<a href="">Kreator aplikacji</a>
 						</p> -->
 					</div>
 					<i class="step-b__i__arow sp-arow"></i>
 				</div>
 				<div class="step-b__i row-fluid">
 					<div class="span6">
-						<h3 class="step-b__i__title">Проводимо ярмарки</h3>
-						<p class="step-b__i__text">Періодично проводимо благодійні розпродажі або інші творчі акції зі збору коштів</p>
+						<h3 class="step-b__i__title">Posiadamy targi</h3>
+						<p class="step-b__i__text">Okresowo prowadzenia sprzedaży charytatywne lub inne twórcze działania w celu pozyskiwania funduszy</p>
 						<!-- <p class="step-b__i__link">
-							<a href="">Наші заходи</a>
+							<a href="">Nasze działania</a>
 						</p> -->
 					</div>
 					<div class="span6">
 						<div class="step-b__i__img">
-							<img src="/access/img/how-it-works-2.png" width="200" height="200" alt="Проводимо ярмарки">
+							<img src="/access/img/how-it-works-2.png" width="200" height="200" alt="Posiadamy targi">
 						</div>					
 					</div>
 					<i class="step-b__i__arow sp-arow"></i>
@@ -141,14 +141,14 @@
 				<div class="step-b__i row-fluid">
 					<div class="span6">
 						<div class="step-b__i__img">
-							<img src="/access/img/how-it-works-3.png" width="200" height="200" alt="Допомагаємо нашим героям">
+							<img src="/access/img/how-it-works-3.png" width="200" height="200" alt="Pomagamy naszym bohaterom">
 						</div>					
 					</div>
 					<div class="span6">
-						<h3 class="step-b__i__title">Допомагаємо нашим героям</h3>
-						<p class="step-b__i__text">Зібрані кошти відправляємо на допомогому військовим: ВСУ або добровольцям</p>
+						<h3 class="step-b__i__title">Pomagamy naszym bohaterom</h3>
+						<p class="step-b__i__text">Zebrane fundusze wysłać pomoc wojskową: U ochotników indziej</p>
 						<!-- <p class="step-b__i__link">
-							<a href="">Куди йдуть кошти</a>
+							<a href="">Gdzie trafiają pieniądze</a>
 						</p> -->
 					</div>
 				</div>
@@ -159,7 +159,7 @@
 	<footer class="footer">
 		<div class="wrapper">
 			<p class="footer__t">
-				Розповсюдити інформацію про проект:
+				Komunikować się w projekt:
 				<span class="social-btn js-social">
 					<a class="social-btn__i sp-mi-fb" id="fb-share" title="Facebook" href="#"></a>
 						<a class="social-btn__i sp-mi-tw" id="tw-share" title="Twitter" href="#"></a>
