--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 ﻿<!DOCTYPE html>
 <html>
-<head lang="UA-ua">
+<head lang="ua">
     <meta charset="utf-8">
     <title>For Heroes</title>
 	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta property="og:title" content="For heroes">
+	<meta property="og:title" content="For Heroes">
 	<meta property="og:description" content="Ми збираємо на допомогу для наших героїв">
 	<meta property="og:url" content="http://forheroes.org.ua/">
-	<meta property="og:image" content="http://forheroes.org.ua/images/open-graph.jpg">
+	<meta property="og:image" content="http://forheroes.org.ua/img/open-graph.jpg">
 
 	<meta property="og:locale" content="ua_UA">
-	<meta property="og:site_name" content="For heroes">
+	<meta property="og:site_name" content="For Heroes">
 	<meta property="og:type" content="article">
 	<meta property="article:publisher" content="https://www.facebook.com/groups/HandmadeForHeroes.UA">
 	
@@ -28,22 +28,24 @@
 	ga('send', 'pageview');
 	</script>
 
-	<link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
-	<link rel="apple-touch-icon" href="touch-icon-iphone.png">
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="apple-touch-icon" sizes="152x152" href="/touch-icon-ipad-retina.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/touch-icon-iphone-retina.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/touch-icon-ipad.png">
+	<link rel="apple-touch-icon" href="/touch-icon-iphone.png">
+	<link rel="shortcut icon" href="/favicon.ico">
 
 	<!--[if IE]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-
-	<link rel="stylesheet" type="text/css" href="css/main.min.css">
+	
+	<!--STYLE-->
+	<link rel="stylesheet" type="text/css" href="/access/css/main.min.css">
+	<!--STYLE END-->
 
 	<link href="http://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 <body class="load">
-	<noscript><div class="noscript">Для полной функциональности этого сайта необходимо включить JavaScript. Вот <a href="http://www.enable-javascript.com/ru/" target="_blank">инструкции, как включить JavaScript в вашем браузере</a>.</div></noscript>
+	<noscript><div class="noscript">Для полной функциональности этого сайта необходимо включить JavaScript. Вот <a href='http://www.enable-javascript.com/ru/' target='_blank'>инструкции, как включить JavaScript в вашем браузере</a>.</div></noscript>
 	
 	<div class="load_overlay" id="load_overlay">
 		<div class="load_animate">
@@ -91,61 +93,15 @@
 					<a href="about.html">Про нас</a>
 				</li>
 				<li class="head__menu__i">
-					<a href="#">UA</a>
+					<div class="language" id="languageSwitcher">
+						<a class="sp-flag-ua on" data-id="ua" href="ua/"></a>
+						<a class="sp-flag-pl" data-id="pl" href="pl/"></a>
+						<a class="sp-flag-en" data-id="en" href="en/"></a>
+					</div>
 				</li>
 			</menu>
 		</div>
 	</header>
-	
-	<script id="projectBlock" type="text/x-handlebars-template">
-	{{#each proj}}
-	{{#if status}}
-	<li class="js-block" data-id="{{id}}">
-		<div class="wrapper">
-			<section class="proj-b">
-				<h1 class="proj-b__title">{{description}}</h1>
-
-				<div class="box-c">
-					<div class="info-t">Зібрано: <b>{{amount}} {{currency}}</b></div>
-					<div class="info-t">Треба зібрати: <b>{{required_amount}} {{currency}}</b></div>
-
-					<div class="row-fluid box-c-btn">
-						<form action="http://app.forheroes.org.ua:8082/api/donate" method="POST">
-							<div class="span6">
-								<div class="cur-input">
-									<span class="cur-input__t">{{currency}}</span>
-
-									<div class="cur-input__w">
-										<input class="cur-input__num" type="number" name="amount" value="{{default_amount}}">
-									</div>
-								</div>
-							</div>
-							<div class="span6">
-								<button class="btn">Сплатити</button>
-								<p class="btn-sub-t">
-									<a class="js-showDes" href="#">Куди підуть кошти?</a>
-								</p>
-
-								<input type="hidden" name="project_id" value="{{id}}">
-							</div>
-						</form>
-					</div>
-				</div>
-				
-				<p class="proj-b__des js-destination">{{destination}}</p>
-				<div class="galery-b js-galery">
-				{{#each images}}<div class="galery-b__i"> {{!Fix display blox (inline-block)}}
-						<a target="_blank" title="{{image_description}}" href="http://app.forheroes.org.ua:8082/images/{{image_name}}" data-gallery="">
-							<img width="240" height="180" alt="{{image_description}}" src="http://app.forheroes.org.ua:8082/images/{{image_tmb_name}}" draggable="false">
-						</a>
-					</div>{{/each}}
-				</div>
-			</section>
-		</div>
-	</li>
-	{{/if}}
-	{{/each}}
-	</script>
 
 	<div class="main-b-slider js-mainSlider">
 		<ul class="slides" id="projectBlockContainer"></ul>
@@ -176,6 +132,8 @@
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="js/main.min.js"></script>
+	<!--SCRIPTS-->
+	<script src="/access/js/main.min.js"></script>
+	<!--SCRIPTS END-->
 </body>
 </html>
