--- a/en/handmade.html
+++ b/en/handmade.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head>
     <meta charset="utf-8">
     <title>Handmade For Heroes - For Heroes</title>
 	
@@ -86,17 +86,14 @@
 				<li class="head__menu__i">
 					<a href="handmade.html">Handmade For Heroes</a>
 				</li>
-				<!-- <li class="head__menu__i">
-					<a href="what-donate.html">Звіти</a>
-				</li> -->
 				<li class="head__menu__i">
 					<a href="about.html">Про нас</a>
 				</li>
 				<li class="head__menu__i">
 					<div class="language" id="languageSwitcher">
-						<a class="sp-flag-ua on" data-id="ua" href="ua/"></a>
-						<a class="sp-flag-pl" data-id="pl" href="pl/"></a>
-						<a class="sp-flag-en" data-id="en" href="en/"></a>
+						<a class="sp-flag-ua on" data-id="ua" title="Український" href="ua/"></a>
+						<a class="sp-flag-pl" data-id="pl" title="Polski" href="pl/"></a>
+						<a class="sp-flag-en" data-id="en" title="English" href="en/"></a>
 					</div>
 				</li>
 			</menu>
