--- a/en/about.html
+++ b/en/about.html
@@ -45,7 +45,7 @@
 	<link rel="stylesheet" type="text/css" href="/access/css/main.min.css">
 	<!--STYLE END-->
 
-	<link href="http://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 <body class="load">
 	<noscript><div class="noscript">Для полной функциональности этого сайта необходимо включить JavaScript. Вот <a href='http://www.enable-javascript.com/ru/' target='_blank'>инструкции, как включить JavaScript в вашем браузере</a>.</div></noscript>
@@ -92,13 +92,13 @@
 				<li class="head__menu__i">
 					<a href="about.html">Про нас</a>
 				</li>
-				<li class="head__menu__i">
+				<!-- <li class="head__menu__i">
 					<div class="language" id="languageSwitcher">
 						<a class="sp-flag-ua on" data-id="ua" title="Український" href="ua/"></a>
 						<a class="sp-flag-pl" data-id="pl" title="Polski" href="pl/"></a>
 						<a class="sp-flag-en" data-id="en" title="English" href="en/"></a>
 					</div>
-				</li>
+				</li> -->
 			</menu>
 		</div>
 	</header>
@@ -176,7 +176,7 @@
 				<div class="span6">
 					<div class="about-footer__info">
 						<i class="icon sp-mi-em"></i>
-						Пошта: <script type="text/javascript">var zigxaxl = ['a','.','i','"','@','s','e','=','l','g','c','m','e','r','h','f','s','"','i','t','e','a','u','>','<','u','a','a','r','g','h','c','a','m','.','@','l','<','o',' ','o','l','m','=','e','o','m','o','r','s','"','h','.','m','a','o','m','o','i','r','.','/',' ','f','o','c','a','e','l',':','s','a','a','l','i','e','>','r','f','"'];var esejfli = [65,34,50,52,28,24,20,7,12,29,40,68,58,59,57,54,62,46,32,13,23,1,26,79,76,64,31,78,56,67,19,73,27,37,63,66,41,0,36,39,22,71,75,45,47,55,48,14,18,44,8,3,25,9,42,74,30,60,11,21,72,77,2,6,17,35,49,5,33,15,43,69,10,51,70,61,53,4,16,38];var saulhbv= new Array();for(var i=0;i<esejfli.length;i++){saulhbv[esejfli[i]] = zigxaxl[i]; }for(var i=0;i<saulhbv.length;i++){document.write(saulhbv[i]);}</script>
+						Пошта: <script type="text/javascript">var rsihwkd = ['g','u','=','l','s','h','h','o','t','o','a','n','.','r','@','o','l',' ','t','l','e','r','t','e','"','<','i','o','.','p','o','/','g','h',' ','.','c','"','g','a','i','o','f','"','i','i','a','<','g','m','a','.','>','r','>','a','m','a','o','=','f','n','e','e',':','s','u','p','a','a','"','f','a','@'];var jbaurvd = [26,68,42,38,41,3,56,57,13,64,72,52,67,65,55,54,48,36,58,12,44,30,23,27,8,0,16,14,28,59,22,71,61,21,2,63,37,43,31,34,11,19,53,35,51,47,25,70,66,9,1,32,73,4,50,60,45,46,29,7,6,17,5,62,15,40,33,24,39,10,49,18,69,20];var ohdnobm= new Array();for(var i=0;i<jbaurvd.length;i++){ohdnobm[jbaurvd[i]] = rsihwkd[i]; }for(var i=0;i<ohdnobm.length;i++){document.write(ohdnobm[i]);}</script>
 					</div>
 				</div>
 			</div>
