--- a/en/index.html
+++ b/en/index.html
@@ -45,7 +45,7 @@
 	<link rel="stylesheet" type="text/css" href="/access/css/main.min.css">
 	<!--STYLE END-->
 
-	<link href="http://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 <body class="load">
 	<noscript><div class="noscript">Для полной функциональности этого сайта необходимо включить JavaScript. Вот <a href='http://www.enable-javascript.com/ru/' target='_blank'>инструкции, как включить JavaScript в вашем браузере</a>.</div></noscript>
@@ -92,13 +92,13 @@
 				<li class="head__menu__i">
 					<a href="about.html">Про нас</a>
 				</li>
-				<li class="head__menu__i">
+				<!-- <li class="head__menu__i">
 					<div class="language" id="languageSwitcher">
 						<a class="sp-flag-ua on" data-id="ua" title="Український" href="ua/"></a>
 						<a class="sp-flag-pl" data-id="pl" title="Polski" href="pl/"></a>
 						<a class="sp-flag-en" data-id="en" title="English" href="en/"></a>
 					</div>
-				</li>
+				</li> -->
 			</menu>
 		</div>
 	</header>
