--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 	<link href="http://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
-<body class="load">
+<body class="">
 	<noscript><div class="noscript">Для полной функциональности этого сайта необходимо включить JavaScript. Вот <a href='http://www.enable-javascript.com/ru/' target='_blank'>инструкции, как включить JavaScript в вашем браузере</a>.</div></noscript>
 	
 	<div class="load_overlay" id="load_overlay">
