--- a/pl/handmade.html
+++ b/pl/handmade.html
@@ -16,7 +16,7 @@
 	<meta property="og:site_name" content="Handmade For Heroes - For Heroes">
 	<meta property="og:type" content="article">
 	<meta property="article:publisher" content="https://www.facebook.com/groups/HandmadeForHeroes.UA">
-	
+
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -47,7 +47,7 @@
 
 	<link href="http://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
-<body class="load">
+<body class="">
 	<noscript><div class="noscript">Dla funktsyonalnosty Zobacz pełną stronę эtoho to neobhodimo JavaScript. tutaj <a href='http://www.enable-javascript.com/ru/' target='_blank'>Instrukcje, jak aktywować JavaScript w swojej przeglądarce</a>.</div></noscript>
 	
 	<div class="load_overlay" id="load_overlay">
